<resources>
    <string name="app_name">Me Encontre Aqui</string>
    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuário</string>
    <string name="prompt_senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="bemvindo">Bem-vindo!</string>
    <string name="checklogado">Permanecer conectado</string>
    <string name="tcadastro">Cadastro</string>
    <string name="confsenha">Confirme a senha</string>
    <string name="telacadastro">Cadastrar</string>
    <string name="btnaddamigo">Adicionar amigo</string>
    <string name="btncriargrupo">Criar grupo</string>
    <string name="hintusername">Username</string>
    <string name="hintnomegrupo">Nome do grupo</string>
    <string name="meusamigos">Meus amigos</string>
    <string name="selecamigos">Selecione os amigos</string>
    <string name="minhalocalizacao">Minha localização</string>
    <string name="txtsair">Sair</string>


    <string name="menu_inicio">Início</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_minhaconta">Minha Conta</string>
    <string name="menu_novoamigo">Novo Amigo</string>
    <string name="menu_novogrupo">Novo Grupo</string>
    <string name="menu_sair">Sair</string>

    <string name="saudacao">Olá, </string>

    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio_maps">Map</string>


</resources>
