<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_minhaconta"
            android:title="@string/menu_minhaconta" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_novoamigo"
            android:title="@string/menu_novoamigo" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_novogrupo"
            android:title="@string/menu_novogrupo" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_configuracoes"
            android:title="@string/menu_configuracoes" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_sair"
            android:title="@string/menu_sair" />
    </group>


</menu>
