<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="25sp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:hint="@string/hintnomegrupo"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/greenPadrao"
        android:textSize="20sp"
        android:text="@string/btncriargrupo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@color/grey"
        android:layout_height="40sp"
        android:textSize="23sp"
        android:text="@string/selecamigos" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>